force-app/main/default/objects/Business_Hours__c/Business_Hours__c.object-meta.xml
<CustomObject>
    <label>Business Hours</label>
    <nameField>
        <displayFormat>BHN-{000000}</displayFormat>
        <label>Business Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>