force-app/main/default/objects/Business_Hours__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>Tue</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>Wed</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>Thu</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>Fri</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>Sat</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>Sun</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>