force-app/main/default/objects/Business_Hours__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Business Hours</relationshipLabel>
    <relationshipName>Business_Hours</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>