force-app/main/default/objects/Business_Hours__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>CASE(Day__c, &apos;Mon&apos;, 1, &apos;Tue&apos;, 2,&apos;Wed&apos;, 3,&apos;Thu&apos;, 4,&apos;Fri&apos;, 5,&apos;Sat&apos;, 6,&apos;Sun&apos;, 7,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>